[package]
name = "pallet-assets-bridge"
version = "1.0.0"
authors = ["ChainX Developers"]
edition = "2018"


[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac", "static-context"], optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

pallet-assets = { path = "../assets", default-features = false }
pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11", default-features = false }

[dev-dependencies]
ethabi = { version = "15.0.0" }
hex-literal = { version = "0.3.1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1",
	"libsecp256k1/std",
	"scale-info/std",

	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"pallet-assets/std",
	"pallet-evm/std",
]
