[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-id-rpc'
version = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"

sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }

pallet-coming-id-rpc-runtime-api = { version = "1.1.0", path = "./runtime-api" }
