[package]
name = "pallet-swap-rpc"
version = "0.1.0"
authors = ["The ChainX Authors"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", features = ["derive"], optional = true }
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"

# Substrate packages
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

# Local packages
pallet-swap = { path = "..", default-features = false }
pallet-swap-rpc-runtime-api = { path = "./runtime-api", default-features = false }
