[package]
name = "xpallet-gateway-records"
version = "3.0.0"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate primitives
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

pallet-assets = { path = "../../assets", default-features = false }

# ChainX primitives
sherpax-primitives = { path = "../../../primitives", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-runtime = { path = "../../../primitives/runtime", default-features = false }

# ChainX pallets
xpallet-support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    # ChainX primitives
    "sherpax-primitives/std",
    "xp-assets-registrar/std",
    "xp-protocol/std",
    "xp-runtime/std",
    # ChainX pallets
    "xpallet-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
