[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-id-rpc-runtime-api'
version = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
pallet-coming-id = { version = "1.1.0", default-features = false, path = "../../../pallet-coming-id" }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-std/std",
    "sp-core/std",
    "codec/std",
    "pallet-coming-id/std",
]
