[package]
name = "pallet-swap-rpc-runtime-api"
version = "0.1.0"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

pallet-swap = { path = '../..', default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'pallet-swap/std'
]
